crates/ty_python_semantic/resources/mdtest/snapshots/assert_type.md_-_`assert_type`_-_Unspellable_types_(385d082f9803b184).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: assert_type.md - `assert_type` - Unspellable types
mdtest path: crates/ty_python_semantic/resources/mdtest/directives/assert_type.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import assert_type
 2 | 
 3 | class Foo: ...
 4 | class Bar: ...
 5 | class Baz: ...
 6 | 
 7 | def f(x: Foo):
 8 |     assert_type(x, Bar)  # error: [type-assertion-failure] "Type `Bar` does not match asserted type `Foo`"
 9 |     if isinstance(x, Bar):
10 |         assert_type(x, Bar)  # error: [assert-type-unspellable-subtype] "Type `Bar` does not match asserted type `Foo & Bar`"
11 | 
12 |         # The actual type must be a subtype of the asserted type, as well as being unspellable,
13 |         # in order for `assert-type-unspellable-subtype` to be emitted instead of `type-assertion-failure`
14 |         assert_type(x, Baz)  # error: [type-assertion-failure]
```

# Diagnostics

```
error[type-assertion-failure]: Argument does not have asserted type `Bar`
  --> src/mdtest_snippet.py:8:5
   |
 7 | def f(x: Foo):
 8 |     assert_type(x, Bar)  # error: [type-assertion-failure] "Type `Bar` does not match asserted type `Foo`"
   |     ^^^^^^^^^^^^-^^^^^^
   |                 |
   |                 Inferred type is `Foo`
 9 |     if isinstance(x, Bar):
10 |         assert_type(x, Bar)  # error: [assert-type-unspellable-subtype] "Type `Bar` does not match asserted type `Foo & Bar`"
   |
info: `Bar` and `Foo` are not equivalent types
info: rule `type-assertion-failure` is enabled by default

```

```
error[assert-type-unspellable-subtype]: Argument does not have asserted type `Bar`
  --> src/mdtest_snippet.py:10:9
   |
 8 |     assert_type(x, Bar)  # error: [type-assertion-failure] "Type `Bar` does not match asserted type `Foo`"
 9 |     if isinstance(x, Bar):
10 |         assert_type(x, Bar)  # error: [assert-type-unspellable-subtype] "Type `Bar` does not match asserted type `Foo & Bar`"
   |         ^^^^^^^^^^^^-^^^^^^
   |                     |
   |                     Inferred type is `Foo & Bar`
11 |
12 |         # The actual type must be a subtype of the asserted type, as well as being unspellable,
   |
info: `Foo & Bar` is a subtype of `Bar`, but they are not equivalent
info: rule `assert-type-unspellable-subtype` is enabled by default

```

```
error[type-assertion-failure]: Argument does not have asserted type `Baz`
  --> src/mdtest_snippet.py:14:9
   |
12 |         # The actual type must be a subtype of the asserted type, as well as being unspellable,
13 |         # in order for `assert-type-unspellable-subtype` to be emitted instead of `type-assertion-failure`
14 |         assert_type(x, Baz)  # error: [type-assertion-failure]
   |         ^^^^^^^^^^^^-^^^^^^
   |                     |
   |                     Inferred type is `Foo & Bar`
   |
info: `Baz` and `Foo & Bar` are not equivalent types
info: rule `type-assertion-failure` is enabled by default

```
